// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`script attribute inspector test rename field sort attribute entries by field name 1`] = `
<article
  className="wonder-scriptAttribute-inspector"
>
  <h1>
    Script Attribute
  </h1>
  <hr />
  <article
    className="inspector-item"
  >
    <div
      className="item-header"
      title="script attribute's name"
    >
      Name
    </div>
    <div
      className="item-content"
    >
      <input
        className="input-component float-input"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="New Script Attribute"
      />
    </div>
  </article>
  <div
    className="scriptAttribute-data"
  >
    <div
      className="data-fields"
    >
      <article
        className="attributeBox-component"
      >
        <div
          className="component-header"
        >
          <div
            className="header-title"
          >
            Attribute
          </div>
          <div
            className="header-close"
          >
            <img
              onClick={[Function]}
              src="./public/img/close.png"
            />
          </div>
        </div>
        <article
          className="inspector-item"
        >
          <div
            className="item-header"
            title=""
          >
            Name
          </div>
          <div
            className="item-content"
          >
            <input
              className="input-component float-input"
              onBlur={[Function]}
              onChange={[Function]}
              type="text"
              value="zzz"
            />
          </div>
        </article>
        <div
          className="component-content"
        >
          <article
            className="inspector-item"
          >
            <div
              className="item-header"
              title="defines how textures are sampled when a texel is insufficient to cover a single pixel"
            >
              Type
            </div>
            <div
              className="item-content"
            >
              <select
                onChange={[Function]}
                value="1"
              >
                <option
                  value="0"
                >
                  Int
                </option>
                <option
                  value="1"
                >
                  Float
                </option>
              </select>
            </div>
          </article>
        </div>
        <article
          className="inspector-item wonder-float-input"
        >
          <div
            className="item-header component-label"
            onMouseDown={[Function]}
            onMouseMove={[Function]}
            onMouseUp={[Function]}
            title=""
          >
            Value
          </div>
          <div
            className="item-content"
          >
            <input
              className="input-component float-input"
              onBlur={[Function]}
              onChange={[Function]}
              type="text"
              value="0."
            />
          </div>
        </article>
      </article>
      <article
        className="attributeBox-component"
      >
        <div
          className="component-header"
        >
          <div
            className="header-title"
          >
            Attribute
          </div>
          <div
            className="header-close"
          >
            <img
              onClick={[Function]}
              src="./public/img/close.png"
            />
          </div>
        </div>
        <article
          className="inspector-item"
        >
          <div
            className="item-header"
            title=""
          >
            Name
          </div>
          <div
            className="item-content"
          >
            <input
              className="input-component float-input"
              onBlur={[Function]}
              onChange={[Function]}
              type="text"
              value="New Script Attribute Field 1"
            />
          </div>
        </article>
        <div
          className="component-content"
        >
          <article
            className="inspector-item"
          >
            <div
              className="item-header"
              title="defines how textures are sampled when a texel is insufficient to cover a single pixel"
            >
              Type
            </div>
            <div
              className="item-content"
            >
              <select
                onChange={[Function]}
                value="1"
              >
                <option
                  value="0"
                >
                  Int
                </option>
                <option
                  value="1"
                >
                  Float
                </option>
              </select>
            </div>
          </article>
        </div>
        <article
          className="inspector-item wonder-float-input"
        >
          <div
            className="item-header component-label"
            onMouseDown={[Function]}
            onMouseMove={[Function]}
            onMouseUp={[Function]}
            title=""
          >
            Value
          </div>
          <div
            className="item-content"
          >
            <input
              className="input-component float-input"
              onBlur={[Function]}
              onChange={[Function]}
              type="text"
              value="0."
            />
          </div>
        </article>
      </article>
    </div>
    <hr />
    <button
      className="data-addable-btn"
      onClick={[Function]}
    >
      Add script attribute's field
    </button>
  </div>
</article>
`;

exports[`script attribute inspector test snapshot test add one field 1`] = `
<article
  className="wonder-scriptAttribute-inspector"
>
  <h1>
    Script Attribute
  </h1>
  <hr />
  <article
    className="inspector-item"
  >
    <div
      className="item-header"
      title="script attribute's name"
    >
      Name
    </div>
    <div
      className="item-content"
    >
      <input
        className="input-component float-input"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="New Script Attribute"
      />
    </div>
  </article>
  <div
    className="scriptAttribute-data"
  >
    <div
      className="data-fields"
    >
      <article
        className="attributeBox-component"
      >
        <div
          className="component-header"
        >
          <div
            className="header-title"
          >
            Attribute
          </div>
          <div
            className="header-close"
          >
            <img
              onClick={[Function]}
              src="./public/img/close.png"
            />
          </div>
        </div>
        <article
          className="inspector-item"
        >
          <div
            className="item-header"
            title=""
          >
            Name
          </div>
          <div
            className="item-content"
          >
            <input
              className="input-component float-input"
              onBlur={[Function]}
              onChange={[Function]}
              type="text"
              value="New Script Attribute Field"
            />
          </div>
        </article>
        <div
          className="component-content"
        >
          <article
            className="inspector-item"
          >
            <div
              className="item-header"
              title="defines how textures are sampled when a texel is insufficient to cover a single pixel"
            >
              Type
            </div>
            <div
              className="item-content"
            >
              <select
                onChange={[Function]}
                value="1"
              >
                <option
                  value="0"
                >
                  Int
                </option>
                <option
                  value="1"
                >
                  Float
                </option>
              </select>
            </div>
          </article>
        </div>
        <article
          className="inspector-item wonder-float-input"
        >
          <div
            className="item-header component-label"
            onMouseDown={[Function]}
            onMouseMove={[Function]}
            onMouseUp={[Function]}
            title=""
          >
            Value
          </div>
          <div
            className="item-content"
          >
            <input
              className="input-component float-input"
              onBlur={[Function]}
              onChange={[Function]}
              type="text"
              value="0."
            />
          </div>
        </article>
      </article>
    </div>
    <hr />
    <button
      className="data-addable-btn"
      onClick={[Function]}
    >
      Add script attribute's field
    </button>
  </div>
</article>
`;
